@@ -109,7 +109,7 @@ class ModuleIsotopeOrderDetails extends ModuleIsotope
 					'raw'			=> $objDownloads->row(),
 					'title'			=> $objDownloads->title,
 					'href'			=> (TL_MODE == 'FE' ? ($this->generateFrontendUrl($objPage->row()) . '?uid=' . $this->Input->get('uid') . '&amp;file=' . $objDownloads->id) : ''),
-					'remaining'		=> ($objDownloads->downloads_allowed > 0 ? sprintf('<br />%s Downloads verbleibend', intval($objDownloads->downloads_remaining)) : ''),
+					'remaining'		=> ($objDownloads->downloads_allowed > 0 ? sprintf($GLOBALS['TL_LANG']['MSC']['downloadsRemaining'], intval($objDownloads->downloads_remaining)) : ''),
 					'downloadable'	=> $blnDownloadable,
 				);
 				
