@@ -102,6 +102,7 @@ class ModuleIsotopeOrderHistory extends ModuleIsotope
 		$this->Template->subTotalLabel = $GLOBALS['TL_LANG']['MSC']['subTotalLabel'];
 		$this->Template->grandTotalLabel = $GLOBALS['TL_LANG']['MSC']['grandTotalLabel'];
 		$this->Template->quantityLabel = $GLOBALS['TL_LANG']['MSC']['iso_quantity_header'];
+		$this->Template->detailsLabel = $GLOBALS['TL_LANG']['MSC']['detailLabel'];
 	}
 }
 
