@@ -129,6 +129,7 @@ $GLOBALS['TL_LANG']['MSC']['actualPrice']            = 'Aktueller Preis';
 $GLOBALS['TL_LANG']['MSC']['noPaymentModules']       = 'Zur Zeit sind keine Zahlungsoptionen verfügbar.';
 $GLOBALS['TL_LANG']['MSC']['noShippingModules']      = 'Leider können die Produkte zur Zeit nicht in Ihr Land geliefert werden. Bitte wählen Sie eine andere Versand-Adresse oder nur Artikel die nicht versendet werden müssen (z.B. Download-Artikel).';
 $GLOBALS['TL_LANG']['MSC']['noOrderEmails']          = 'Keine Bestell-E-Mails gefunden.';
+$GLOBALS['TL_LANG']['MSC']['downloadsRemaining']	= '<br />%s Downloads verbleibend';
 
 $GLOBALS['TL_LANG']['MSC']['cartBT']              = 'Warenkorb';
 $GLOBALS['TL_LANG']['MSC']['checkoutBT']          = 'Zur Kasse';
