@@ -11,6 +11,7 @@ Version 0.2.6 (2011-02-??)
 - Fixed issue with HTML in plain text emails
 - Fixed CSS classes for new address fields in checkout module
 - Fixed publish toggle not working for non-admins
+- Fixed hardcoded labels in order history/details (Ticket #382)
 - Fixed: Address was not added to address book correctly
 - Fixed: Downloads in PDF invoice caused fatal error
 
